1.1
-----

- Added LHA support for.
- Updated `SharpCompress` to 0.32.2.