@@ -3,3 +3,4 @@
 
 - Added LHA support for.
 - Updated `SharpCompress` to 0.32.2.
+- `ArchiveAnalyer` supports obtaining properties from the archive's `IFileNodeInfo` implementation.
